--- a/index.html
+++ b/index.html
@@ -1,20 +1,162 @@
 <!DOCTYPE html>
-<html lang="ar">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SynQuantum</title>
-    <link rel="stylesheet" href="style.css">
+    <title>SynQuantum | Quantum Research Hub</title>
+    <!-- SEO Meta Tags -->
+    <meta name="description" content="SynQuantum - Pioneering research in quantum computing and materials science.">
+    <meta name="keywords" content="quantum computing, research, algorithms, science">
+    <!-- Embedded CSS -->
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: 'Arial', sans-serif;
+        }
+
+        /* Navigation */
+        nav {
+            background: #2c3e50;
+            padding: 1rem;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+        nav a {
+            color: white;
+            text-decoration: none;
+            margin: 0 15px;
+        }
+
+        /* Hero Section */
+        .hero {
+            text-align: center;
+            padding: 6rem 2rem;
+            background: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url('https://via.placeholder.com/1920x600');
+            color: white;
+        }
+
+        /* Publications Section */
+        .publications {
+            padding: 3rem 2rem;
+            max-width: 1200px;
+            margin: 0 auto;
+        }
+        .paper {
+            background: white;
+            padding: 2rem;
+            margin: 2rem 0;
+            border-radius: 10px;
+            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+        }
+
+        /* Contact Form */
+        .contact-form {
+            padding: 2rem;
+            background: #f8f9fa;
+        }
+        input, textarea {
+            width: 100%;
+            padding: 0.8rem;
+            margin: 0.5rem 0;
+            border: 1px solid #ddd;
+            border-radius: 4px;
+        }
+        button {
+            background: #3498db;
+            color: white;
+            padding: 1rem 2rem;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+
+        /* Footer */
+        footer {
+            background: #2c3e50;
+            color: white;
+            text-align: center;
+            padding: 2rem;
+            margin-top: 3rem;
+        }
+    </style>
 </head>
 <body>
-    <header>
-        <h1>مرحبًا بكم في SynQuantum</h1>
-    </header>
-    <main>
-        <p>هذا موقعنا الاحترافي على GitHub Pages.</p>
-    </main>
+    <!-- Navigation -->
+    <nav>
+        <div class="logo">
+            <a href="/">SynQuantum</a>
+        </div>
+        <div class="links">
+            <a href="#home">Home</a>
+            <a href="#research">Research</a>
+            <a href="#contact">Contact</a>
+        </div>
+    </nav>
+
+    <!-- Hero Section -->
+    <section class="hero" id="home">
+        <h1>Advancing the Frontiers of Quantum Science</h1>
+        <p>Exploring next-generation quantum algorithms and materials</p>
+    </section>
+
+    <!-- Research Publications -->
+    <section class="publications" id="research">
+        <h2>Latest Research Papers</h2>
+        
+        <div class="paper">
+            <h3>Quantum Optimization Algorithms for NP-Hard Problems</h3>
+            <p class="authors">John Doe, Jane Smith (2023)</p>
+            <p class="abstract">
+                This paper introduces a novel quantum annealing approach to solve 
+                combinatorial optimization problems with 98% accuracy improvement...
+            </p>
+            <a href="#download-pdf" class="btn">Download PDF</a>
+            <a href="#cite" class="btn">Cite Paper</a>
+        </div>
+    </section>
+
+    <!-- Contact Form -->
+    <section class="contact-form" id="contact">
+        <h2>Contact Our Team</h2>
+        <form action="https://formspree.io/f/your-form-id" method="POST">
+            <input type="email" name="email" placeholder="Your Email" required>
+            <textarea name="message" placeholder="Your Message" rows="5" required></textarea>
+            <button type="submit">Send Message</button>
+        </form>
+    </section>
+
+    <!-- Footer -->
     <footer>
-        <p>© 2023 SynQuantum</p>
+        <p>© 2023 SynQuantum. All Rights Reserved.</p>
+        <div class="social">
+            <a href="#"><i class="fab fa-twitter"></i> Twitter</a>
+            <a href="#"><i class="fab fa-linkedin"></i> LinkedIn</a>
+        </div>
     </footer>
+
+    <!-- Embedded JavaScript -->
+    <script>
+        // Google Analytics Integration
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+        ga('create', 'UA-XXXXX-Y', 'auto');
+        ga('send', 'pageview');
+
+        // Smooth Scroll
+        document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+            anchor.addEventListener('click', function (e) {
+                e.preventDefault();
+                document.querySelector(this.getAttribute('href')).scrollIntoView({
+                    behavior: 'smooth'
+                });
+            });
+        });
+    </script>
 </body>
 </html>
