--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SynQuantum | Quantum Research Hub</title>
+    <title>SynQuantum | Quantum Research</title>
     <!-- SEO Meta Tags -->
-    <meta name="description" content="SynQuantum - Pioneering research in quantum computing and materials science.">
-    <meta name="keywords" content="quantum computing, research, algorithms, science">
+    <meta name="description" content="SynQuantum - Cutting-edge research in quantum computing and materials science.">
+    <meta name="keywords" content="quantum computing, research, algorithms, nanotechnology">
+    <!-- Font Awesome for Icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <!-- Embedded CSS -->
     <style>
+        /* Reset and Base Styles */
         * {
             margin: 0;
             padding: 0;
@@ -16,61 +19,113 @@
             font-family: 'Arial', sans-serif;
         }
 
-        /* Navigation */
+        body {
+            line-height: 1.6;
+            background-color: #f8f9fa;
+        }
+
+        /* Mobile-First Navigation */
         nav {
             background: #2c3e50;
             padding: 1rem;
+            position: relative;
+        }
+
+        .nav-container {
             display: flex;
             justify-content: space-between;
             align-items: center;
+            max-width: 1200px;
+            margin: 0 auto;
         }
-        nav a {
+
+        .logo a {
             color: white;
             text-decoration: none;
-            margin: 0 15px;
+            font-size: 1.5rem;
+        }
+
+        .menu {
+            display: none;
+            list-style: none;
+        }
+
+        .menu.active {
+            display: flex;
+            flex-direction: column;
+            position: absolute;
+            top: 100%;
+            left: 0;
+            right: 0;
+            background: #2c3e50;
+            padding: 1rem;
+        }
+
+        .menu li {
+            margin: 0.5rem 0;
+        }
+
+        .menu a {
+            color: white;
+            text-decoration: none;
+            padding: 0.5rem;
+        }
+
+        .hamburger {
+            color: white;
+            font-size: 1.5rem;
+            cursor: pointer;
         }
 
         /* Hero Section */
         .hero {
             text-align: center;
-            padding: 6rem 2rem;
-            background: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url('https://via.placeholder.com/1920x600');
+            padding: 4rem 1rem;
+            background: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url('https://via.placeholder.com/600x400');
+            background-size: cover;
             color: white;
         }
 
-        /* Publications Section */
-        .publications {
-            padding: 3rem 2rem;
-            max-width: 1200px;
-            margin: 0 auto;
-        }
-        .paper {
+        /* Scientific Article Section */
+        .article {
+            max-width: 800px;
+            margin: 2rem auto;
+            padding: 1rem;
             background: white;
-            padding: 2rem;
-            margin: 2rem 0;
-            border-radius: 10px;
-            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+            border-radius: 8px;
         }
 
-        /* Contact Form */
-        .contact-form {
-            padding: 2rem;
+        .article h2 {
+            color: #2c3e50;
+            margin-bottom: 1rem;
+        }
+
+        .article-meta {
+            color: #666;
+            font-size: 0.9rem;
+            margin-bottom: 1rem;
+        }
+
+        .abstract {
             background: #f8f9fa;
+            padding: 1rem;
+            border-left: 4px solid #3498db;
+            margin: 1rem 0;
         }
-        input, textarea {
-            width: 100%;
-            padding: 0.8rem;
-            margin: 0.5rem 0;
-            border: 1px solid #ddd;
-            border-radius: 4px;
+
+        .equation {
+            font-family: 'Times New Roman', serif;
+            font-size: 1.2rem;
+            text-align: center;
+            margin: 1rem 0;
         }
-        button {
-            background: #3498db;
-            color: white;
-            padding: 1rem 2rem;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
+
+        /* Responsive Images */
+        img {
+            max-width: 100%;
+            height: auto;
+            margin: 1rem 0;
         }
 
         /* Footer */
@@ -79,83 +134,94 @@
             color: white;
             text-align: center;
             padding: 2rem;
-            margin-top: 3rem;
+            margin-top: 2rem;
+        }
+
+        /* Media Queries for Tablets and Desktops */
+        @media (min-width: 768px) {
+            .hamburger { display: none; }
+            .menu {
+                display: flex;
+                gap: 2rem;
+            }
+            .article { padding: 2rem; }
         }
     </style>
 </head>
 <body>
     <!-- Navigation -->
     <nav>
-        <div class="logo">
-            <a href="/">SynQuantum</a>
-        </div>
-        <div class="links">
-            <a href="#home">Home</a>
-            <a href="#research">Research</a>
-            <a href="#contact">Contact</a>
+        <div class="nav-container">
+            <div class="logo">
+                <a href="/">SynQuantum</a>
+            </div>
+            <ul class="menu">
+                <li><a href="#home">Home</a></li>
+                <li><a href="#research">Research</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+            <i class="fas fa-bars hamburger"></i>
         </div>
     </nav>
 
     <!-- Hero Section -->
     <section class="hero" id="home">
-        <h1>Advancing the Frontiers of Quantum Science</h1>
-        <p>Exploring next-generation quantum algorithms and materials</p>
+        <h1>Revolutionizing Quantum Materials</h1>
+        <p>Peer-Reviewed Research Published in Nature Quantum</p>
     </section>
 
-    <!-- Research Publications -->
-    <section class="publications" id="research">
-        <h2>Latest Research Papers</h2>
-        
-        <div class="paper">
-            <h3>Quantum Optimization Algorithms for NP-Hard Problems</h3>
-            <p class="authors">John Doe, Jane Smith (2023)</p>
-            <p class="abstract">
-                This paper introduces a novel quantum annealing approach to solve 
-                combinatorial optimization problems with 98% accuracy improvement...
-            </p>
-            <a href="#download-pdf" class="btn">Download PDF</a>
-            <a href="#cite" class="btn">Cite Paper</a>
+    <!-- Scientific Article -->
+    <section class="article" id="research">
+        <h2>Topological Quantum States in 2D Materials</h2>
+        <div class="article-meta">
+            <span>Authors: Dr. Alice Smith, Prof. John Doe</span><br>
+            <span>Published: 15 October 2023 | DOI: 10.1038/s41586-023-06789-9</span>
         </div>
-    </section>
 
-    <!-- Contact Form -->
-    <section class="contact-form" id="contact">
-        <h2>Contact Our Team</h2>
-        <form action="https://formspree.io/f/your-form-id" method="POST">
-            <input type="email" name="email" placeholder="Your Email" required>
-            <textarea name="message" placeholder="Your Message" rows="5" required></textarea>
-            <button type="submit">Send Message</button>
-        </form>
+        <div class="abstract">
+            <strong>Abstract:</strong> We demonstrate the emergence of non-Abelian anyons in twisted 
+            bilayer graphene through precise control of moiré superlattices...
+        </div>
+
+        <h3>1. Introduction</h3>
+        <p>Recent advances in 2D material engineering have opened new avenues...</p>
+
+        <h3>2. Methodology</h3>
+        <img src="https://via.placeholder.com/600x300" alt="Experimental Setup">
+        <p>Our experimental configuration (Fig. 1) combines cryogenic STM with...</p>
+
+        <div class="equation">
+            H = −t∑⟨i,j⟩ c<sub>i</sub><sup>†</sup>c<sub>j</sub> + Δ∑<sub>i</sub> c<sub>i</sub><sup>†</sup>σc<sub>i</sub>
+        </div>
+
+        <h3>3. Results</h3>
+        <table>
+            <tr>
+                <th>Sample</th>
+                <th>Critical Temperature (K)</th>
+                <th>Conductivity (S/m)</th>
+            </tr>
+            <tr>
+                <td>TBG-1</td>
+                <td>4.2</td>
+                <td>1.2×10<sup>5</sup></td>
+            </tr>
+        </table>
     </section>
 
     <!-- Footer -->
     <footer>
-        <p>© 2023 SynQuantum. All Rights Reserved.</p>
+        <p>© 2023 SynQuantum. All rights reserved.</p>
         <div class="social">
-            <a href="#"><i class="fab fa-twitter"></i> Twitter</a>
-            <a href="#"><i class="fab fa-linkedin"></i> LinkedIn</a>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="#"><i class="fab fa-linkedin"></i></a>
         </div>
     </footer>
 
-    <!-- Embedded JavaScript -->
+    <!-- JavaScript for Mobile Menu -->
     <script>
-        // Google Analytics Integration
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-        ga('create', 'UA-XXXXX-Y', 'auto');
-        ga('send', 'pageview');
-
-        // Smooth Scroll
-        document.querySelectorAll('a[href^="#"]').forEach(anchor => {
-            anchor.addEventListener('click', function (e) {
-                e.preventDefault();
-                document.querySelector(this.getAttribute('href')).scrollIntoView({
-                    behavior: 'smooth'
-                });
-            });
+        document.querySelector('.hamburger').addEventListener('click', () => {
+            document.querySelector('.menu').classList.toggle('active');
         });
     </script>
 </body>
